feat: archive page which has listing of *all* my blog posts

--- a/preamble.html
+++ b/preamble.html
@@ -1,9 +1,14 @@
 <nav class="top-nav">
-  <div>
-    <ul>
-      <li><a href="/">Home</a></li>
-    </ul>
+  <div class="brand">
+    <a href="/">
+      <img
+        class="brand-avatar"
+        src="/assets/images/avatar.png"
+        alt="Charanjit Singh"
+      />
+    </a>
   </div>
+
   <div>
     <ul>
       <li><a href="/blog">Blog</a></li>
